# buildroot-yodart

./: Config.in  README.md  external.desc  external.mk
configs/: qemu_x86_64_yodart_defconfig
package/: Config.in
package/yodart/: Config.in
package/yodart/property/: Config.in  property.mk
source/3rd/android_lib/bionic/property/: CMakeLists.txt
source/3rd/android_lib/bionic/property/src/: system_properties_compat.c
